   * Fix in the docstring for how to use the "set" method.  Found and fixed
     by William McVey

Thu, 02 Apr 2009 13:37:49 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.44

   * Allowing spaces in the key.  (Patch provided by xmm on Launchpad)

   * Detecting when the pickler needs a positional argument.  (Patch
     provided by Brad Clements on Launchpad)

   * Moving length check after the compression.  (Patch provided by user
     Tom on Launchpad)

   * Fixing arguments passed to the _Error if invalid read length.

   * Fixing the representation of domain sockets.  (Patch provided by user
     MTB on Launchpad)

   * Changing a typo of dead_until.  (Patch provided by Shane R. Spencer)

   * Providing better error messages (patch provided by Johan Euphrosine).

   * Adding get_slabs() function to get stats.  (Patch provided
     by Nick Verbeck)

Sun, 01 Jun 2008 15:05:11 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.43

   *  eliott reported a bug in the 1.42 related to the socket timeout code
      causing a traceback due to the timeout value not being set.

Sat, 31 May 2008 02:09:17 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.42

   *  Paul Hummer set up a Launchpad project which I'm going to start using
      to track patches and allow users to set up their own bzr branches and
      manage marging in the upstream patches with their own.

         https://launchpad.net/python-memcached

   *  Patch from Jehiah Czebotar which does: Changing the calls to
      mark_dead() to make them dereference tuples, reducing timeout on
      sockets to 3 seconds, settable via setting Host._SOCKET_TIMEOUT.

   *  Patches from Steve Schwarz for set_multi() to return the full set of
      keys if all servers are down.  Previously would not report any keys.

   *  Fix from Steve Schwarz delete_multi() argument "seconds" not being
      correctly handled.  Changed it to "time" to match all other calls.
