@@ -1,3 +1,11 @@
+   * incr/decr were raising ValueError if the key did not exist, the
+     docstring said it returned none.  Patch by Chihiro Sakatoku.
+
+   * Included cmemcache_hash, by permission of Ludvig Ericson.
+     To use, do "memcached.cmemcache_activate()".
+
+   * Adding cas method, submitted by Ben Gutierrez.
+
    * Fix in the docstring for how to use the "set" method.  Found and fixed
      by William McVey
 
